--- a/Template/tile.html
+++ b/Template/tile.html
@@ -4,12 +4,12 @@
         <div class="doc-lib-count"></div>
         <div class="doc-lib-files"></div>
     </div>
-    <div class="pdf-body row"></div>
-    <div class="pdf-block row">
-        <div class="pdf-docdesc"></div>
-    </div>
-    <div class="pdf-document row"></div>
-    <div class="pdf-pop-up"></div>
+    
+    <div class="doc-lib-list row"></div>
+    
+    <div class="doc-lib-list-item row"></div>
+    
+    
     <div class="doc-lib-title row"></div>
     
 </div>
